--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "react-with-express",
+  "name": "js-minesweeper",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.17.1",
+    "node-persist": "^3.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
@@ -27,5 +29,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
